# patent-hub

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CI_FIX_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_SETUP.md  LICENSE  MULTI_REPO_SYNC.md  PROJECT_STATUS.md  README.en.md  README.md  SYNC_STATUS.md  auto_create_release.ps1  auto_create_release.sh  build.bat  fix_routes.py  fix_routes2.py  fix_routes_final.py  import_test_data.bat  patent-hub.postman_collection.json  self-review.bat  serp_test.json  start-patent-hub.bat  start-release.bat  start.bat  temp_function.txt  test_body.json  test_local.json  test_out.json  一键安装.bat  与智慧芽对比分析.md  分发指南.md  卸载开机自启动.bat  启动服务器-移动版.bat  启动服务器.bat  安装开机自启动.bat  (+6 more)
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
android-app/: settings.gradle
android-app/app/: build.gradle
docs/: API.md  ARCHITECTURE.md  INSTALL.md  MOBILE_ACCESS.md  MOBILE_APP.md  QUICK_START.md  deepscientist-insights.md  depth-quality-gate.md  hero-mockup.html  public-data-local-pipeline.md  real-test-report-v050-v053-2026-04-19.md  real-test-v050-v053-2026-04-19.json  release-e2e-summary-v0.5.6-2026-04-24.md  release-gate-manual-e2e.md  release-incident-v0.5x.md  release-postmortem-v0.5.6-2026-04-24.md  release-prepush-review-v0.5.6-2026-04-24.md  release-retrospective-v0.5.4.md  release_verify.ps1  国内用户指南.md  快速上手.md
docs/plans/: 2026-03-08-skill-router.md  v0.5.0-remaining-tasks.md
docs/self-review/: results.md
harmonyos/: README.md
harmonyos/AppScope/: app.json5
innoforge-skill/: SUMMARY.md
innoforge-skill/iteration-1/: benchmark.json
innoforge-skill/iteration-2/: benchmark.json
ios-app/PatentHub/: Info.plist  PatentHub-Bridging-Header.h  ViewController.swift
ios-app/PatentHub.xcodeproj/: project.pbxproj
mobile/: Dioxus.toml
mobile/src/: main.rs
patent-hub-skill/: SKILL.md  SUMMARY.md
patent-hub-skill/evals/: evals.json
patent-hub-skill/iteration-1/: benchmark.json
scripts/: build.sh  install-linux.sh  install-macos.sh  install-scheduler.ps1
src/: ai.rs  db.rs  error.rs  lib.rs  main.rs  patent.rs  routes.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend/: ai.html  compare.html  idea.html  index.html  patent_detail.html  search.html  settings.html
src-tauri/frontend/static/: api-config.js  i18n.js  service-worker.js  style.css
src-tauri/src/: lib.rs
src/ai/: client.rs  mod.rs  patent.rs
src/db/: collection.rs  evidence.rs  idea.rs  migrations.rs  mod.rs  patent.rs  relevance.rs  settings.rs  version.rs
src/experiment/: generator.rs  mod.rs  sandbox.rs  types.rs
src/orchestrator/: command.rs  engine.rs  mod.rs
src/pipeline/: context.rs  runner.rs  state.rs
src/pipeline/steps/: analysis.rs  claim_tree.rs  contradiction.rs  deep_reasoning.rs  experiment.rs  finalize.rs  mod.rs  parse.rs  prior_art_cluster.rs  rank.rs  (+2 more)
src/routes/: ai.rs  collections.rs  feature_cards.rs  idea.rs  mod.rs  pages.rs  patent.rs  search.rs  settings.rs  upload.rs
src/skill_router/: capability_registry.rs  executor.rs  loader.rs  matcher.rs  mod.rs  online_search.rs  planner.rs  registry.rs  security.rs  synth.rs  types.rs
static/: i18n.js  manifest.json  style.css
templates/: ai.html  compare.html  idea.html  index.html  patent_detail.html  search.html  settings.html  test.html
tests/: orchestrator_integration.rs  patent_hub_integration.rs  skill_router_pipeline.rs
tools/: depth_gate_test.py  import_public_patents.py  manual_e2e_verify.ps1  manual_e2e_verify_ascii.ps1  perf_probe.ps1  run_visible_e2e_at_0145.ps1  visible_e2e_test.py
(+12 files in other folders)
