[package]
name = "patent-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.29", features = ["bundled"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
local-ip-address = "0.6.10"
